--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,4 +2,10 @@
 # See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
-  hello: "Hello world"
+  date:
+      formats:
+        default: "%Y-%m-%d"
+  time:
+    formats:
+      default: "%Y-%m-%d %I:%M %p"
+      long: "%B %d, %Y %I:%M %p"
